move some builtin TypeRedirect implementation to srcCore